<resources>
    <string name="app_name">Platzigram</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="button_login">Login</string>
    <string name="dont_have_account">¿No tienes cuenta?, </string>
    <string name="create_here">crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="button_createaccount">Unete</string>
    <string name="toolbar_tittle_createaccount">Crear cuenta</string>
    <string name="username_card">Uriel ramirez</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 dias</string>
    <string name="likenumber_card">10 Me gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Yo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secondword_detail">Me gusta</string>
    <string name="tittleimagedetail">"Todo copas en la playa"</string>
    <string name="lorem">Ejemplo de Lorem ipsum Lorem ipsum es el texto que se usa habitualmente en diseño gráfico en demostraciones de tipografías o de borradores de diseño para probar el diseño visual antes de insertar el texto final
        demostraciones de tipografías o de borradores de diseño para probar el diseño visual antes de insertar el texto final.</string>
    <string name="transitioname_picture">transitionname_picture</string>
    <string name="hint_tittle">Titulo</string>
    <string name="hint_descripcion">Descripción</string>
    <string name="button_createpost">Crear post</string>




    <string name="facebook_app_id">259417068103877</string>
    <string name="fb_login_protocol_scheme">fb259417068103877</string>

</resources>
