<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".post.view.NewPostActivity">

    <include layout="@layout/actionbar_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgPhoto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:background="@color/backgroundtext_card"
            android:scaleType="centerCrop" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/edittext_margin_createaccount"
            android:layout_weight="1.5"
            android:theme="@style/EditTextBlack">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtTittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_tittle" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/edittext_margin_createaccount"
            android:layout_weight="1.5"
            android:theme="@style/EditTextBlack">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_descripcion" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnCreatePost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_createpost"
            android:theme="@style/RaisedButtonDark" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>